--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.8.1",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "unidecode": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
